# smb_ros2_workspace

./: .gitattributes  .gitignore  .tmux.conf  CMakeLists.txt  README.md  gitman.yml  package.xml
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/docker/: Dockerfile
.github/workflows/: build-push.yml
config/: smb261.cam0.TEST.yaml  smb261_cam0.yaml  smb_vis.rviz  tracking_camera_config.json  tracking_camera_rear_config.json  twist_mux_topics.yaml
docs/: frames_2025-06-23_19.56.46.gv  frames_2025-06-24_20.24.59.gv
launch/: Navigation_launch.py  Slam_launch.py  debug_far.launch.py  debug_graphmsf.launch.py  debug_real.launch.py  debug_sim.launch.py  exploration_launch.py  flir_camera.launch.py  jetson_rgb_camera.launch.py  motor_controller.launch.py  rgb_camera_driver.launch.py  rslidar_launch.py  sensors.launch.py  sensors_jetson.launch.py  smb.launch.py  smb_nuc_system.launch.py  smb_sim.launch.py  smb_sim_exploration.launch.py  smb_sim_navigation.launch.py  smb_sim_se.launch.py  state_se_launch.py
rviz/: debug.rviz
scripts/: smb_bashrc.sh  smb_zshrc.sh
scripts/config/: 10-cyclone-max.conf  cyclonedds-config.xml  cyclonedds-robot-config.xml  fastdds-config.xml  fastdds-robot-config.xml  kasmvnc.yaml  netplan-nuc.conf  phc2sys.service  phc2sys_jetson.service  phc2sys_nuc.service  ptp4l_jetson.service  ptp4l_nuc.service  ptp4l_slave.service  xstartup
scripts/ros/: smb_record.sh  teleop_twist_keyboard.sh
scripts/setup/: requirements.txt  setup-cmake.sh  setup-desktop-host.sh  setup-fancy-prompt.sh  setup-fzf.sh  setup-graph-msf.sh  setup-kasmvnc.sh  setup-open3d-slam.sh  setup-open3d.sh  setup-robot-host.sh  setup-ros.sh
src/meta_packages/meta_smb_jetson/: CMakeLists.txt  package.xml
src/meta_packages/meta_smb_nuc/: CMakeLists.txt  package.xml
src/meta_packages/meta_smb_sim/: CMakeLists.txt  package.xml
