<?xml version="1.0"?>
<package format="3">
  <name>smb_bringup</name>
  <version>1.0.0</version>
  <description>SuperMegaBot package for the ETHZ Robotic Summer School</description>
  
  <maintainer email="thomas.mantel@mavt.ethz.ch">Thomas Mantel</maintainer>
  <author email="pankertj@ethz.ch">Johannes Pankert</author>
  
  <license>Proprietary</license>

  <!-- Use ament_cmake as the build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies -->
  <depend>odometry_conversion</depend>
  <depend>smb_sensors</depend>
  <depend>smb_control</depend>
  <depend>smb_lowlevel_controller</depend>
  <depend>smb_opc</depend>

  <!-- Export section -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
