<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>meta_smb_sim</name>
  <version>0.1.0</version>
  <description>Meta package for SMB packages on the sim robot</description>
  <maintainer email="dishtaweera@ethz.ch">Deepana Ishtaweera</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- SMB specific dependencies -->
  <depend>smb_description</depend>
  <depend>smb_low_level_controller_gazebo</depend>
  <depend>smb_power_status</depend>
  <depend>smb_kinematics</depend>
  <depend>smb_bringup</depend>
  <depend>smb_gazebo</depend>
  <depend>smb_rviz_plugins</depend>
  <depend>smb_ui</depend>
  <depend>direct_lidar_inertial_odometry</depend>
  <depend>smb_estimator_graph_ros2</depend>
  <depend>far_planner</depend>
  <depend>local_planner</depend>
  <depend>terrain_analysis</depend>
  <depend>terrain_analysis_ext</depend>
  <depend>visualization_tools</depend>
  <depend>waypoint_rviz_plugin</depend>
  <depend>tare_planner</depend>
  <depend>navigation_ext_ros2</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package> 